<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/settings"
    android:background="@color/white"
    tools:context=".attendee.SettingsActivity">
    <!--Citation: OpenAI, 2024-02-28, ChatGPT, How to use drawables -->
    <!-- output is that you call the drawable file with android:background-->

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_display"
        android:hint="Birth Date"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.779"
        app:layout_constraintStart_toEndOf="@+id/word_birthday"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="108dp"
        android:background="@drawable/edit_text_display"
        android:hint="Name"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toEndOf="@+id/word_name"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_display"
        android:digits="0123456789+- "
        android:hint="XXX-XXX-XXXX"
        android:inputType="phone"
        android:maxLength="12"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.656"
        app:layout_constraintStart_toEndOf="@+id/word_number"
        app:layout_constraintTop_toBottomOf="@+id/birthday" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_display"
        android:hint="Email"
        android:textAlignment="textEnd"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toEndOf="@+id/word_email"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber" />
<!--     Citation: OpenAI, 04-07-2024, ChatGPT, How to make text on a single line-->
<!--    output was android:singleLine="true" -->

    <EditText
        android:id="@+id/website"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/edit_text_display"
        android:hint="Website"
        android:singleLine="true"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toEndOf="@+id/word_website"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/address"
        android:layout_width="324dp"
        android:layout_height="38dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_border"
        android:hint="Address"
        android:padding="8dp"
        android:singleLine="true"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_address" />

    <TextView
        android:id="@+id/word_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="40dp"
        android:text="*Name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_account_title" />

    <!-- Citation: Creating a toolbar, Stack Overflow, License: CC-BY-SA, user name vesii (edited by Gabriele Mariotti), "Which dependencies are needed for using the Toolbar?", 2020-05-13 (edited 2020-05-13), https://stackoverflow.com/questions/61774131/which-dependencies-are-needed-for-using-the-toolbar-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:titleTextColor="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Settings"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="165dp"
            tools:layout_editor_absoluteY="17dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/my_account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="My Account"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/word_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Birth Date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_name" />

    <TextView
        android:id="@+id/word_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Mobile Number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_birthday" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="119dp"
        android:layout_height="61dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/black"
        android:text="Save"
        app:cornerRadius="0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/word_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_number" />

    <TextView
        android:id="@+id/word_website"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Website"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_email" />

    <TextView
        android:id="@+id/word_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="Address"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_website" />

    <TextView
        android:id="@+id/word_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="Permission"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address" />

    <CheckBox
        android:id="@+id/locationCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:text="Location"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_permission" />
</androidx.constraintlayout.widget.ConstraintLayout>