...
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/organizer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
...
        app:cornerRadius="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_text" />

    <Button
        android:id="@+id/admin_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
...
