...
        android:layout_marginTop="4dp"
        android:text="Profile"/>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/switch_modes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:clickable="true"
        app:backgroundTint="@color/white"
        app:fabCustomSize="45dp"
...
